spell checked and 1st complete draft -> given to Tony

--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -325,7 +325,7 @@ admixture -s 123456 -P study.bed 9
 
 Heritability analysis is a method for determining what proportion of phenotypic variation can be attributed to environmental effects (non-heritable) and genetic effects (heritable) [@Visscher2008]. There are two measures of heritability, the first is known as broad-sense heritability (H^2^) and is the ratio of the total genetic variance to the total phenotypic variance. The second measure is narrow-sense heritability (h^2^) and is the ratio of the genetic variance attributed to an additive genetic model to the total genetic variance.
 
-The \gls{gcta} v1.26.0 [@Yang2011; @Yang2011part] was used to calculate the proportion of genetic heritability explained for gout. First the UK Biobank genetic data (section \@ref(ukbbdata)) were subsetted to only contain gout cases and controls and the genome partitioned into chromosomes. A \gls{grm} was created for each chromosome. The genetic variance explained was calculated for each chromosome using restricted maximum likelihood analysis and a general population prevalence for gout of 2%. The following code was used to calculate the \gls{grm} and partition the genetic heritability by chromosome.
+The \gls{gcta} v1.26.0 [@Yang2011] was used to calculate the proportion of genetic heritability explained for gout. First the UK Biobank genetic data (section \@ref(ukbbdata)) were subsetted to only contain gout cases and controls and the genome partitioned into chromosomes. A \gls{grm} was created for each chromosome. The genetic variance explained was calculated for each chromosome using restricted maximum likelihood analysis and a general population prevalence for gout of 2%. The following code was used to calculate the \gls{grm} and partition the genetic heritability by chromosome.
 
 
 ```{r, engine='bash', eval=FALSE}
@@ -482,7 +482,7 @@ Mean grandparent ancestry is the proportion of grandparents self-reported as bel
 #### CoreExome {#coreExomeQC}
 
 
-The Infinium CoreExome-24 bead-chip is a genotyping platform available from Illumina and is comprised of a core set of 551,839 markers. A subset of the individuals in the Genetics of Gout in Aotearoa study were genoytped on this platform at the University of Queensland (Centre for Clinical Genomics). Genotyping quality control was performed by Dr Tanya Major (Merriman Lab) following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines [\@ref]. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from GenomeStudio that had a call rate > 98%, markers were removed if the call-rate was < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed. 
+The Infinium CoreExome-24 bead-chip is a genotyping platform available from Illumina and is comprised of a core set of 551,839 markers. A subset of the individuals in the Genetics of Gout in Aotearoa study were genotyped on this platform at the University of Queensland (Centre for Clinical Genomics). Genotype quality control was performed by Dr Tanya Major (Merriman Lab) following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines [\@ref]. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from GenomeStudio that had a call rate > 98%, markers were removed if the call-rate was < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed. 
 <!-- Samples were also checked for outliers in heterozygosity and depression of genetic variation. -->
 
 Markers were subsetted to only include bi-allelic \glspl{snp}, with a final marker number of `r NROW(markers)` and density of `r lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>% mean() %>% round_dp(., 0)` bp/marker. Relatedness between individuals was assessed through inheritance by state using Plink v1.9b3.32 and a pedigree of families created by Dr Tanya Major (Merriman lab) to identify family groups. Duplicates and first degree relations were excluded and single individuals were randomly selected from family groups identified through identity by state analysis, which determined the proportions of individual genomes that were identical in a pair-wise manner. 
