--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -49,7 +49,7 @@ More recently there have been studies that have looked at selection in Polynesia
 
 #### Thrifty Gene Hypothesis
 
-The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, whereby it was posed that due to the differences between individuals with or diabetes that how could a disease that should have strong selection against it continue to have high prevalence if there was not some genetic advantage [@Neel1962]. In the Polynesian context, this hypothesis has been invoked in an attempt to explain the higher prevalence of metabolic related diseases such as \gls{t2d} and obesity [@Myles2011; @Minster2016]. However, there are several refutations of the thrifty genotype for Polynesian populations as being 'just-so' stories [@Cadzow2016; @Gosling2014; @Gosling2015]. An alternative to the 'thrifty-gene' hypothesis is that the link between metabolic diseases and the innate immune system, susceptibility of populations to metabolic disease might be due to selective pressure from infectious disease, such as malaria [@Gosling2015]. Uricase, the enzyme for metabolising urate, was lost through multiple mutations - a reduction in promoter activity followed by two further loss of function mutations and occurred before the divergence of humans from the great apes [@Kratzer2014]. The evolutionary history of uricase however has also been described as "the original thrifty-gene" [@Kratzer2014].
+The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, whereby it was posed that due to the differences between individuals with and without diabetes, how could a disease that should have strong selection against it continue to have high prevalence if there was not some genetic advantage [@Neel1962]. In the Polynesian context, this hypothesis has been invoked in an attempt to explain the higher prevalence of metabolic related diseases such as \gls{t2d} and obesity [@Myles2011; @Minster2016]. However, there are several refutations of the thrifty genotype for Polynesian populations as being 'just-so' stories [@Cadzow2016; @Gosling2014; @Gosling2015]. An alternative to the 'thrifty-gene' hypothesis is that the link between metabolic diseases and the innate immune system, susceptibility of populations to metabolic disease might be due to selective pressure from infectious disease, such as malaria [@Gosling2015]. Uricase, the enzyme for metabolising urate, was lost through multiple mutations - a reduction in promoter activity followed by two further loss of function mutations and occurred before the divergence of humans from the great apes [@Kratzer2014]. The evolutionary history of uricase however has also been described as "the original thrifty-gene" [@Kratzer2014].
 
 ### Selection in urate and gout
 
@@ -111,6 +111,8 @@ Bigman2010 has a custom Tajima's D that is created to be similar to iHS in terms
 
 
 ### Objectives
+
+The objectives of this chapter are to:
 
 - Investigate regions that are under selection in the Polynesian populations
 - Investigate regions previously associated with urate, \gls{t2d}, obesity, kidney disease, and metabolic syndrome for signatures of selection
@@ -712,7 +714,7 @@ The general format that I want for this section is to get:
 - pathway/ontology terms
 -->
 
-In this subsection results will be presented first for those that were in common between all Polynesian populations and the sub-groups of East and West Polynesia. Following this, the results for individual Polynesian populations will be presented. A complete table of all genes that had results meeting the various thresholds for the various statistics used can be found in the Appendix Tables \@ref(tab:intrasfsPol) (\gls{sfs}-based statistics), \@ref(tab:ihsnslPolgenes) (\gls{ihs} and \gls{nsl}), and \@ref(tab:xpehhPolgenes) (\gls{xpehh}).
+In this subsection results will be presented first for those that were in common between all Polynesian populations and the sub-groups of East and West Polynesia. Following this, the results for individual Polynesian populations will be presented. A complete table of all genes that had results meeting the various thresholds for the various statistics used can be found in the Appendix Tables \@ref(tab:intrasfsPol) (\gls{sfs}-based statistics), \@ref(tab:tab:ihsnslPolGenes) (\gls{ihs} and \gls{nsl}), and \@ref(tab:xpehhPolgenes) (\gls{xpehh}).
 
 There were `r genelists %>% NROW()` genes that were associated with urate and metabolic diseases from the \gls{gwas} catalog (see Table \@ref(tab:gwascatref) for references), with `r bind_rows(sig_ihs_val, sig_nsl_val) %>% select(pop, SYMBOL = genename) %>% bind_rows(., lower_sig_stats %>% select(pop, SYMBOL)) %>% filter(SYMBOL %in% genelists$genename, pop %in% poly_pop) %>% select(SYMBOL) %>% distinct() %>% NROW()` having at least a single window from the lower tail, or \gls{snp} meeting a threshold for a single statistic in the Polynesian populations. Genes reported here were highlighted based on three criteria: a significant haplotypic result in multiple Polynesian populations, or having multiple statistics meeting the significance threshold in at least a single Polynesian population, or the locus only having the main significant result in Polynesian populations, with minimal signal in other populations, i.e. multiple significant markers in Polynesian populations and one or two in other populations.
 
@@ -1197,7 +1199,7 @@ sig_nsl_val %>% filter(genename %in% c('CACNA1D', 'ADCY9', 'SLC8A1', 'CACNA2D2',
 <!-- There were `r consec_lower_regions %>% filter(stat == 'Tajima.D', pop == 'CIM') %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce(ignore.strand = TRUE) %>% length()` regions of consecutive score depression for \gls{td}, `r consec_lower_regions %>% filter(stat == 'Fay.Wu.H', pop == 'CIM') %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce(ignore.strand = TRUE) %>% length()` for \gls{fwh}, `r consec_lower_regions %>% filter(stat == 'Fu.Li.D', pop == 'CIM') %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce(ignore.strand = TRUE) %>% length()` for \gls{fld}, `r consec_lower_regions %>% filter(stat == 'Fu.Li.F', pop == 'CIM') %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce(ignore.strand = TRUE) %>% length()` for \gls{flf}, and `r consec_lower_regions %>% filter(stat == 'Zeng.E', pop == 'CIM') %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce(ignore.strand = TRUE) %>% length()` for \gls{ze}. -->
 
 
-Looking at regions of contiguous depressed score that also had either a significant \gls{ihs} or \gls{nsl} marker in them, there were a total of four regions that met this criteria. For \gls{td}, there were two regions. The first, a 290 kb region at chr2:24215002-24505001 intersected _FAM228B_ and had a single significant marker for both \gls{ihs} and \gls{nsl} (rs13035774). The second, was 470 kb in length at chr11:68105002-68575001, and included _LRP5_, which had a single significant marker (rs634008) for \gls{ihs}. \gls{flf} also had a region that covered _LRP5_ but at chr11:68085002-68355001 and was 270 kb long. For \gls{flf}, there was a 250 kb region at chr16:3545002-3795001 that intersected _DNASE1_ with a single marker (rs13926) for \gls{ihs} and \gls{nsl}, and also _TRAP1_ with two markers (rs13926 and rs1639150) each for \gls{ihs} and \gls{nsl}. \gls{fwh} had a single 250 kb region that itersected _MYT1L_ at chr2:2015002-2265001 and had four significant markers for \gls{ihs} (rs4571084, rs13404264, rs11888121, and rs13382326) and four for \gls{nsl} (rs4571084, rs12470297, rs11888121, and rs13382326), outside this region but surrounding and still within the gene. 
+Looking at regions of contiguous depressed score that also had either a significant \gls{ihs} or \gls{nsl} marker in them, there were a total of four regions that met this criteria. For \gls{td}, there were two regions. The first, a 290 kb region at chr2:24215002-24505001 intersected _FAM228B_ and had a single significant marker for both \gls{ihs} and \gls{nsl} (rs13035774). The second, was 470 kb in length at chr11:68105002-68575001, and included _LRP5_, which had a single significant marker (rs634008) for \gls{ihs}. \gls{flf} also had a region that covered _LRP5_ but at chr11:68085002-68355001 and was 270 kb long. For \gls{flf}, there was a 250 kb region at chr16:3545002-3795001 that intersected _DNASE1_ with a single marker (rs13926) for \gls{ihs} and \gls{nsl}, and also _TRAP1_ with two markers (rs13926 and rs1639150) each for \gls{ihs} and \gls{nsl}. \gls{fwh} had a single 250 kb region that intersected _MYT1L_ at chr2:2015002-2265001 and had four significant markers for \gls{ihs} (rs4571084, rs13404264, rs11888121, and rs13382326) and four for \gls{nsl} (rs4571084, rs12470297, rs11888121, and rs13382326), outside this region but surrounding and still within the gene. 
 
 <!-- > Tony: LRP5 has a Poly specific missense variant, this could be the marker that is referred to in text  -->
 <!-- > checked and not the same 11,68207287,rs113007633,45420,T,C,0.0833,0.0385,0.1562,0,missense_variant,3_prime_UTR_variant,upstream_gene_variant,non_coding_transcript_exon_variant,LRP5,Met1464Thr,.,MODERATE,MODIFIER -->
@@ -1225,7 +1227,7 @@ consec_lower_regions %>% filter( pop == 'CIM') %>% inner_join(., bind_rows(sig_i
 
 ##### Selection from haplotypic statistics in \gls{cim}.
 
-The significant \gls{ihs} and \gls{nsl} values after conversion to a P-value are show by position across the genome as a Manhattan plot in Figure \@ref(fig:cimHapMan). The most extreme markers for \gls{ihs} (by genomic position, -log~10~(P) > 4.8) were chr2: rs11683451, rs2890456, and rs6755308; chr4: rs17060079; chr8: rs2319924; chr11: rs7931930 and rs11212617; chr20: rs647518; chr21: rs28559700.  The most extreme markers for \gls{nsl} (by genomic position, -log~10~(P) > 4.8) were chr4: rs1491411; chr11: rs543215 and rs1963626; chr12: rs7977414. Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@shungin2015genetic; @mahajan2014genome] and _RREB1_ was associated with \gls{t2d} and urate [@mahajan2014genome; @Kottgen2013]. 
+The significant \gls{ihs} and \gls{nsl} values after conversion to a P-value are show by position across the genome as a Manhattan plot in Figure \@ref(fig:cimHapMan). The conversion of the \gls{ihs} or \gls{nsl} value to a P value used 1 - P(|Z|), where Z was the \gls{ihs} or \gls{nsl} value, due to the similarity in of the \gls{ihs} and \gls{nsl} to a Z-score. The most extreme markers for \gls{ihs} (by genomic position, -log~10~(P) > 4.8) were chr2: rs11683451, rs2890456, and rs6755308; chr4: rs17060079; chr8: rs2319924; chr11: rs7931930 and rs11212617; chr20: rs647518; chr21: rs28559700.  The most extreme markers for \gls{nsl} (by genomic position, -log~10~(P) > 4.8) were chr4: rs1491411; chr11: rs543215 and rs1963626; chr12: rs7977414. Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@shungin2015genetic; @mahajan2014genome] and _RREB1_ was associated with \gls{t2d} and urate [@mahajan2014genome; @Kottgen2013]. 
 
 (ref:cimHapMan) Manhattan plot for significant markers in \gls{cim} for both \gls{ihs} and \gls{nsl}.
 
@@ -1917,7 +1919,7 @@ bind_rows(bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'TON')%>% select
 
 
 Pathway enrichment analysis from the Enrichr KEGG 2016 pathways had `r kegg_sig %>% filter(pop == 'ton') %>% select(Term) %>% distinct() %>% NROW()` different pathways that were significant after multiple testing correction (Table \@ref(tab:keggPath)). Of the \gls{sfs} based methods, only \gls{flf} had a significant pathway and this was "Olfactory transduction". There were two pathway terms that were significant from the \gls{ihs} results, these were "ABC transporters" and "ECM-receptor interaction". These were also significant in the \gls{nsl} results, along with another eight terms (Table \@ref(tab:keggPath)). 
-The genes that were included in the "ABC transporters" pathway from the significant markers of both \gls{ihs} and \gls{nsl} were: , _ABCC8_, _TAP2_, _ABCA9_, _ABCA8_, and _ABCG2_. From only \gls{ihs} markers _ABCA5_  _ABCA6_, _ABCC5_ _ABCB_ were included, and from only \gls{nsl} markers, _ABCB8_ was included. Genes wth significant markers for both \gls{ihs} and \gls{nsl} in the "ECM-receptor interaction" pathway included _COL4A2_, _ITGB5_, _ITGA1_, _ITGA2_, _SPP1_ and _ITGB6_. From only \gls{ihs} markers _LAMA5_, _TNXB_, _TNC_, _COL6A3_, and _HMMR_ were included, and from only \gls{nsl} makers, _COL4A1_, and _ITGA9_ were inlcuded. Five of the significant pathway terms were only significant in \gls{ton} out of the Polynesian populations.
+The genes that were included in the "ABC transporters" pathway from the significant markers of both \gls{ihs} and \gls{nsl} were: , _ABCC8_, _TAP2_, _ABCA9_, _ABCA8_, and _ABCG2_. From only \gls{ihs} markers _ABCA5_  _ABCA6_, _ABCC5_ _ABCB_ were included, and from only \gls{nsl} markers, _ABCB8_ was included. Genes with significant markers for both \gls{ihs} and \gls{nsl} in the "ECM-receptor interaction" pathway included _COL4A2_, _ITGB5_, _ITGA1_, _ITGA2_, _SPP1_ and _ITGB6_. From only \gls{ihs} markers _LAMA5_, _TNXB_, _TNC_, _COL6A3_, and _HMMR_ were included, and from only \gls{nsl} makers, _COL4A1_, and _ITGA9_ were included. Five of the significant pathway terms were only significant in \gls{ton} out of the Polynesian populations.
 
 
 ##### Selection from haplotypic statistics in \gls{ton}.
@@ -3142,7 +3144,7 @@ cim_nzm_shared_kegg %>% select(-cim) %>% mutate(nzm = str_split(nzm, ";")) %>% s
 
 ### Selection of Urate Associated Genes
 
-The second objective was to investigate regions associated with urate, gout and related co-morbidities for evidence of selection in the Polynesian populations. There was evidence for selection in urate associated loci. However, the evidence did not appear to be specific for urate itself, but for loci that are involved in more general metabolic pathways. The main effect loci identified through \gls{gwas}, _SLC2A9_ and _ABCG2_, had limited evidence of positive selection. _ABCG2_ had a significant marker (rs2622626) with \gls{ihs} and \gls{nsl} and only in \gls{ton} from the Polynesian populations, the only other populations were \gls{gih} and \gls{itu} from the \gls{sas} super population. This marker showing significance however might be due to the gout prevalence of the \gls{ton} sample population which was 54%, the same result is not seen in closest population with the most similar ancestral background, \gls{sam}, where the prevalence of gout in the sample population was much lower at 12%. Although rs2622626 has not previously been associated with gout in East Asian populations [@zhang2016associations], nor did it have an assocation in the gout gwas analysis in chapter 5.
+The second objective was to investigate regions associated with urate, gout and related co-morbidities for evidence of selection in the Polynesian populations. There was evidence for selection in urate associated loci. However, the evidence did not appear to be specific for urate itself, but for loci that are involved in more general metabolic pathways. The main effect loci identified through \gls{gwas}, _SLC2A9_ and _ABCG2_, had limited evidence of positive selection. _ABCG2_ had a significant marker (rs2622626) with \gls{ihs} and \gls{nsl} and only in \gls{ton} from the Polynesian populations, the only other populations were \gls{gih} and \gls{itu} from the \gls{sas} super population. This marker showing significance however might be due to the gout prevalence of the \gls{ton} sample population which was 54%, the same result is not seen in closest population with the most similar ancestral background, \gls{sam}, where the prevalence of gout in the sample population was much lower at 12%. Although rs2622626 has not previously been associated with gout in East Asian populations [@zhang2016associations], nor did it have an association in the gout gwas analysis in chapter 5.
 
 Only _RREB1_ and _IGFR1_ had haplotypic evidence with \gls{xpehh} across multiple other populations. The other gene of note that didn't have haplotypic evidence, but did have multiple windows in the 1^st^ percentile across multiple statistics and all Polynesian populations was _BCAS3._ _BCAS3_ had been previously identified as selected in @Grossman2013. _RREB1_ was also associated with obesity and \gls{t2d} traits. @Zhang2013a had reported a variant nearby to _RREB1_ (rs675209) as having evidence of selection but this particular marker was absent from the CoreExome \gls{snp} array.
 
@@ -3185,7 +3187,7 @@ As discussed in @Gosling2014, the thrifty gene hypothesis in the context of the 
 
 ### Malaria
 
-Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. There is also evidence of malaria in the prehistory skeletal remains of the western Pacific islands [@buckley2006predators]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant assocation with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele with the displaying a possible signal of selection.
+Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. There is also evidence of malaria in the prehistory skeletal remains of the western Pacific islands [@buckley2006predators]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele with the displaying a possible signal of selection.
 
 From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a very strong signal for \gls{ihs} for 7 markers in \gls{cim} and 2 markers in \gls{nzm}, that were the only populations with significant \gls{ihs} values. The variant rs10775349 in _ADCY9_ had been associated with malaria in a candidate gene approach but not in \gls{gwas} [@Maiga2013].
 
@@ -3203,7 +3205,7 @@ With the adaptation of the selection and neutrality tests into genome-wide usage
 
 There was also a higher likelihood of a longer gene being reported as significant due to more windows overlapping the genic region. Not only that, but the window size meant that \glspl{snp} not in the window might not be near the actual window i.e. -45 and +45 kb away from the edge of the defined window in the worst case. This would lead to some difficulty in definitive location. The flip side to this was that it allows for upstream and downstream effects of a \gls{snp} to be incorporated. There was a trade off between \gls{snp} density and window size. There were `r NROW(markers) %>% formatC(., format = 'f', big.mark = ',', digits = 0)` bi-allelic \gls{snp} markers used in this analysis from the CoreExome \gls{snp} array. This was less than the other projects such as the HapMap project, and considerably less than the sequence data that the 1000 Genomes Project used. The marker density may have been able to be improved up though the imputation of the missing markers using a haplotype reference panel. Ideally this analysis would have had a higher marker density, however it was decided that it was best to remain unimputed due to both the haplotype uncertainty at the phasing step, and the Polynesian populations not being represented in the haplotype reference panel used for phasing and imputation. An example of why having Polynesian haplotypes represented is important, is the finding of @Minster2016, where the variant (rs373863828) had no appreciable allele frequency outside of Polynesia. Implications from the marker density used are the number of \glspl{snp} per window was lower than in other studies and specifically when looking at the degradation of haplotypes there is the possibility for early truncation due to lack of data.
 
-The method itself of using the empirical distribution and selecting the extremes for a statistic to determine the region under selection does have precedence [@voight2006map; @Hider2013; @Jonnalagadda2017], however, this does assume that selection had occurred. The underlying null distribution of the genome is also unknown. It does need to be acknowledged that using the extremes of the distribution is likely to lead to many false positives [@Teshima2006]. This was somewhat mitigated in this study by using the permutations of the actual data to calculate the expected \gls{fdr}. Having internal replication within super populations also helps to reduce the \gls{fdr}, for the Polynesian populations this consisted of the Eastern and Western Polyesnia population pairings.
+The method itself of using the empirical distribution and selecting the extremes for a statistic to determine the region under selection does have precedence [@voight2006map; @Hider2013; @Jonnalagadda2017], however, this does assume that selection had occurred. The underlying null distribution of the genome is also unknown. It does need to be acknowledged that using the extremes of the distribution is likely to lead to many false positives [@Teshima2006]. This was somewhat mitigated in this study by using the permutations of the actual data to calculate the expected \gls{fdr}. Having internal replication within super populations also helps to reduce the \gls{fdr}, for the Polynesian populations this consisted of the Eastern and Western Polynesia population pairings.
 
 Allele frequency methods, and also the haplotypic methods may get confounded by the gout prevalences of the Polynesian sample sets, especially the \gls{cim} and \gls{ton} sets, where the prevalence of gout was up to five-fold higher than the general population prevalence for those populations. Loci that showed evidence in multiple populations that did not have this enrichment for the disease trait would be expected to have more credibility. This is important to consider for the co-morbidities of gout too, given the commonalities in associated genes.
 
