--- a/references.bib
+++ b/references.bib
@@ -4373,3 +4373,56 @@ url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1243518},
 volume = {343},
 year = {2014}
 }
+
+@article{Ramirez-Soriano2008,
+abstract = {Several tests have been proposed to detect departures of nucleotide variability patterns from neutral expectations. However, very different kinds of evolutionary processes, such as selective events or demographic changes, can produce similar deviations from these tests, thus making interpretation difficult when a significant departure of neutrality is detected. Here we study the effects of demography and recombination upon neutrality tests by analyzing their power under sudden population expansions, sudden contractions, and bottlenecks. We evaluate tests based on the frequency spectrum of mutations and the distribution of haplotypes and explore the consequences of using incorrect estimates of the rates of recombination when testing for neutrality. We show that tests that rely on haplotype frequencies-especially Fs and ZnS, which are based, respectively, on the number of different haplotypes and on the r2 values between all pairs of polymorphic sites-are the most powerful for detecting expansions on nonrecombining genomic regions. Nevertheless, they are strongly affected by misestimations of recombination, so they should not be used when recombination levels are unknown. Instead, class I tests, particularly Tajima's D or R2, are recommended.},
+author = {Ram{\'{i}}rez-Soriano, Anna and Ramos-Onsins, Sebasti{\`{a}} E. and Rozas, Julio and Calafell, Francesc and Navarro, Arcadi},
+doi = {10.1534/genetics.107.083006},
+file = {:home/murraycadzow/Dropbox/Papers/GEN1791555.pdf:pdf},
+isbn = {0016-6731 (Print)$\backslash$n0016-6731 (Linking)},
+issn = {00166731},
+journal = {Genetics},
+number = {1},
+pages = {555--567},
+pmid = {18493071},
+title = {{Statistical power analysis of neutrality tests under demographic expansions, contractions and bottlenecks with recombination}},
+volume = {179},
+year = {2008}
+}
+
+@article{Yi2010b,
+abstract = {Residents of the Tibetan Plateau show heritable adaptations to extreme altitude. We sequenced 50 exomes of ethnic Tibetans, encompassing coding sequences of 92{\%} of human genes, with an average coverage of 18x per individual. Genes showing population-specific allele frequency changes, which represent strong candidates for altitude adaptation, were identified. The strongest signal of natural selection came from endothelial Per-Arnt-Sim (PAS) domain protein 1 (EPAS1), a transcription factor involved in response to hypoxia. One single-nucleotide polymorphism (SNP) at EPAS1 shows a 78{\%} frequency difference between Tibetan and Han samples, representing the fastest allele frequency change observed at any human gene to date. This SNP's association with erythrocyte abundance supports the role of EPAS1 in adaptation to hypoxia. Thus, a population genomic survey has revealed a functionally important locus in genetic adaptation to high altitude.},
+author = {Yi, Xin and Liang, Yu and Huerta-Sanchez, Emilia and Jin, Xin and Cuo, Zha Xi Ping and Pool, John E and Xu, Xun and Jiang, Hui and Vinckenbosch, Nicolas and Korneliussen, Thorfinn Sand and Zheng, Hancheng Huisong and Liu, Tao and He, Weiming and Li, Kui and Luo, Ruibang and Nie, Xifang and Wu, Honglong and Zhao, Meiru and Cao, Hongzhi and Zou, Jing and Shan, Ying and Li, Songgang Shuzheng and Yang, Qi and Asan and Ni, Peixiang and Tian, Geng and Xu, Junming and Liu, Xiao and Jiang, Tao and Wu, Renhua and Zhou, Guangyu and Tang, Meifang and Qin, Junjie and Wang, Tong and Feng, Shuijian and Li, Guohong and Huasang and Luosang, Jiangbai and Wang, Wei and Chen, Fang and Wang, Yading and Zheng, Xiaoguang and Li, Zhuo and Bianba, Zhuoma and Yang, Ge and Wang, Xinping and Tang, Shuhui and Gao, Guoyi and Chen, Yong and Luo, Zhen and Gusang, Lamu and Cao, Zheng and Zhang, Qinghui and Ouyang, Weihan and Ren, Xiaoli and Liang, Huiqing and Zheng, Hancheng Huisong and Huang, Yebo and Li, Jingxiang and Bolund, Lars and Kristiansen, Karsten and Li, Yingrui and Zhang, Yong and Zhang, Xiuqing and Li, Ruiqiang and Li, Songgang Shuzheng and Yang, Huanming and Nielsen, Rasmus and Wang, Jian Jun and Wang, Jian Jun},
+doi = {10.1126/science.1190371},
+file = {:home/murraycadzow/Dropbox/Papers/Yi.SOM.pdf:pdf;:home/murraycadzow/Dropbox/Papers/75.full.pdf:pdf},
+isbn = {1095-9203 (Electronic)$\backslash$n0036-8075 (Linking)},
+issn = {0036-8075},
+journal = {Science (New York, N.Y.)},
+number = {5987},
+pages = {75--78},
+pmid = {20595611},
+title = {{Sequencing of 50 human exomes reveals adaptation to high altitude.}},
+volume = {329},
+year = {2010}
+}
+
+
+@article{Haasl2016,
+abstract = {Genomewide scans for natural selection (GWSS) have become increasingly common over the last 15 years due to increased availability of genome-scale genetic data. Here, we report a representative survey of GWSS from 1999 to present and find that (i) between 1999 and 2009, 35 of 49 (71{\%}) GWSS focused on human, while from 2010 to present, only 38 of 83 (46{\%}) of GWSS focused on human, indicating increased focus on nonmodel organisms; (ii) the large majority of GWSS incorporate interpopulation or interspecific comparisons using, for example FST, cross-population extended haplo- type homozygosity or the ratio of nonsynonymous to synonymous substitutions; (iii) most GWSS focus on detection of directional selection rather than other modes such as balancing selection; and (iv) in human GWSS, there is a clear shift after 2004 from microsatellite markers to dense SNP data. A survey of GWSS meant to identify loci positively selected in response to severe hypoxic conditions support an approach to GWSS in which a list of a priori candidate genes based on potential selective pres- sures are used to filter the list of significant hits a posteriori. We also discuss four fre- quently ignored determinants of genomic heterogeneity that complicate GWSS: mutation, recombination, selection and the genetic architecture of adaptive traits. We recommend that GWSS methodology should better incorporate aspects of genomewide heterogeneity using empirical estimates of relevant parameters and/or realistic, whole- chromosome simulations to improve interpretation of GWSS results. Finally, we argue that knowledge of potential selective agents improves interpretation of GWSS results and that new methods focused on correlations between environmental variables and genetic variation can help automate this approach. Keywords:},
+archivePrefix = {arXiv},
+arxivId = {15334406},
+author = {Haasl, Ryan J. and Payseur, Bret A.},
+doi = {10.1111/mec.13339},
+eprint = {15334406},
+file = {:home/murraycadzow/Dropbox/Papers/Haasl{\_}et{\_}al-2016-Molecular{\_}Ecology.pdf:pdf},
+isbn = {1365-294X},
+issn = {1365294X},
+journal = {Molecular Ecology},
+keywords = {genetic architecture,genomewide scans for selection,mutation,natural selection,recombination},
+number = {1},
+pages = {5--23},
+pmid = {26224644},
+title = {{Fifteen years of genomewide scans for selection: Trends, lessons and unaddressed genetic sources of complication}},
+volume = {25},
+year = {2016}
+}
