--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -34,6 +34,9 @@
   text={derived allele frequency},
   description={Derived allele frequency}
 }
+
+\newacronym[description={Change in derived allele frequency}]{ddaf}{$\Delta$DAF}{change in derived allele frequency}
+
 \newacronym[description={American College of Rheumatology}]{acr}{ACR}{American College of Rheumatology}
 \newacronym[description={Akaike information criterion}]{aic}{AIC}{Akaike information criterion}
 \newacronym[description={Wellcome Trust Case-Control Consortium}]{wtccc}{WTCCC}{Wellcome Trust Case-Control Consortium}
