--- a/A1-Supplementary_Tables.Rmd
+++ b/A1-Supplementary_Tables.Rmd
@@ -10,9 +10,9 @@ library(phdFunctions)
 
 poly_pop <- c("CIM","NZM","SAM","TON")
 ```
-# Appendix E
+# Appendix A - Supplemental tables
 
-## Electronic Supplements
+## Chapter 3 tables
 
 
 ```{r}
@@ -28,6 +28,7 @@ names(markers) <- c("chrom","chrom_start","marker","ref","alt")
 hider_regions_found <- readRDS('data/03-hider-regions-found.RDS')
 hider_regions_found %>% mutate_at(4:NCOL(.), funs(replace_na(., '-'))) %>% mutate(chr = as.numeric(str_sub(chrom, 4)))%>% arrange(chr, chrom_start) %>% select(-chr) %>% kable(., col.names = c("Chrom","Start", "End", "\\gls{td} Region", "\\gls{td} Present","\\gls{fwh} Region", "\\gls{fwh} Present", "\\gls{flf} Region", "\\gls{flf} Present", '\\gls{ihs} Region', '\\gls{ihs} Present'), format = 'latex', booktabs = TRUE, longtable = TRUE, linesep ='', caption = '(\\#tab:hiderRegionsFound)', escape = FALSE) %>% column_spec(4:11, width = "5em") %>% kable_styling(latex_options = c('repeat_header'),font_size = 8) %>% landscape()
 ```
+
 ```{r ramos}
 ramos <- list()
 ramos[["ceu"]] <- c("ALMS1P", "DGUOK", "PARD3B", "KCNIP4", "HLA", "PRKCH", "HIF1A", "IRF4", "TECRL", "CTNNA3", "WWOX", "RABEP1", "NUP88", "COMMD10", "SEMA6A", "ALDH7A1", "SNRPC", "UHRF1BP1", "OSBPL8", "GRM5", "NTNG2", "SETX", "GRHL2")
@@ -36,41 +37,8 @@ ramos[["asi"]] <- c("NCF2", "RGL1", "PELI1", "HLA", "BCAS3", "NACA2", "CNTN6", "
 ramos[["unknown"]] <- c("IL23R", "FCGR2B", "TNFSF4", "CR1", "ANTRX2", "TNIP1", "PTTG1", "VARS", "LSM2", "IKZF1", "IRF8", "TYK2", "CLEC16A", "CIITA", "ITGAM", "ITGAX", "SH2B3", "NAA25", "CD5", "PTGER4")
 ```
 
-```{r, eval = FALSE}
-(sig_ihs_val %>% filter(pop == 'CEU', genename %in% ramos[['ceu']])%>% mutate(pop = 'CEU', statname = case_when(statid == 20 ~ "nSL", statid == 26 ~ "iHS"), chrom = paste0('chr',chrom)) %>% select(SYMBOL = genename, chrom, statname) %>% distinct()) 
-
-```
 
 
-
-```{r, results = 'asis', eval = FALSE}
-# modify so that the full table comes out
-pander::pandoc.table(chr_summary %>% mutate(mean = sapply(mean, three_dp), sd = sapply(sd, three_dp), lower_1 = sapply(lower_1, three_dp), upper_99 = sapply(upper_99, three_dp), median = sapply(median, three_dp), min = sapply(min,three_dp), max = sapply(max, three_dp)) %>% arrange(chrom,pop,stat) %>% head() %>% data.frame(),  caption = '(\\#tab:selStatSummary) Summary of the selection test statistics for all populations and all autosomes', split.tables = 80, style = 'multiline', justify = 'lccrrrrrrr')
-```
-
-```{r meanSegSitesTable, results='asis', echo = FALSE, eval=FALSE}
-create_sel_stat_table("n.segregating.sites", "Mean Number of Segregating Sites")
-```
-
-<!-- Tajimas D Table -->
-```{r meanTDtable, results='asis', echo = FALSE, eval = FALSE}
-create_sel_stat_table("Tajima.D", "Mean Tajima's D")
-```
-
-<!-- Fay and Wu's H Table -->
-```{r meanFWHtable, results='asis', echo = FALSE, eval = FALSE}
-create_sel_stat_table("Fay.Wu.H", "Mean Fay and Wu's H")
-```
-
-<!-- Fu and Li F Table -->
-```{r, results='asis', echo = FALSE, eval = FALSE}
-create_sel_stat_table("Fu.Li.F","Mean Fu and Li F")
-```
-
-<!--Zeng E Table -->
-```{r, results='asis', echo = FALSE, eval = FALSE}
-create_sel_stat_table("Zeng.E", "Mean Zeng E")
-```
 
 ```{r, echo = FALSE, results='hold'}
 # This is created by coreExome_100kb_windows_intra_filtered.Rmd
@@ -85,9 +53,6 @@ global_summary <- readRDS("~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/1
 
 ```
 
-```{r, echo = FALSE, results='hold', eval = FALSE}
-global_summary  %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(super_pop) %>% select(stat, super_pop, pop, mean, sd, min, lower_1,median,upper_99, max)  %>% arrange(stat,super_pop, pop) %>%  data.frame()%>% mutate(stat = case_when(stat == "Tajima.D" ~ "Tajima's D", stat == "Fay.Wu.H" ~ "Fay and Wu's H", stat == "Fu.Li.F" ~ "Fu and Li's F", stat == "Zeng.E" ~ "Zeng's E", stat == "n.segregating.sites" ~ 'Num. segregating sites' ))  %>% rename(Statistic = stat, 'Super Population' = super_pop, Population = pop, Mean = mean, SD = sd, Minimum = min, '1st Percentile' = lower_1, Median = median, '99th Percentile' = upper_99, Maximum = max)%T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-gsTable.csv', row.names = FALSE, quote = FALSE)} %>% kable(., caption = '(\\#tab:gsTable) Global Summary Table', format = 'latex', booktabs = TRUE, longtable = TRUE, linesep = "", digits = 3) %>% kable_styling(font_size = 8, latex_options = c('repeat_header')) %>% footnote(general = "Appendices/03-gsTable.csv")
-```
 
 ```{r, warning =TRUE}
 lower_sig_stats <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/100kbwindows_lower_sig_stat_genes_filtered_ns3_resized-31-8-2017.RDS')
@@ -110,22 +75,16 @@ upper_sig_stats <- bind_rows(lapply(names(upper_sig_stats), function(y){
 
 ```
 
+### Genes in 1st percentile for Polynesian populations for frequency based statistics
+
 ```{r intrasfsPol, results='hold'}
 # create a table of all of the loci that had windows in the 1st percentile and < 0 in value
 lower_sig_stats %>% filter( pop %in% c('CIM','NZM','SAM','TON')) %>% select(chrom, statname, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',')  %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", ")) %>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(statname, chr) %>% select(statname, everything(), -chr) %>% filter(!is.na(SYMBOL)) %>% mutate(stat = case_when(statname == "Tajima.D" ~ "Tajima's D", statname == "Fay.Wu.H" ~ "Fay and Wu's H", statname == "Fu.Li.F" ~ "Fu and Li's F", statname == "Zeng.E" ~ "Zeng's E" ))  %>% rename('Statistic' = statname, Chrom = chrom, 'Gene name' = SYMBOL, Population = Pop)  %T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-intrasfsPol.csv', row.names = FALSE, quote = TRUE)} %>% head(3) %>% kable(., caption = '(\\#tab:intrasfsPol) All genes that had a window in the 1st percentile and value < 0 from a Polynesian population', booktabs = TRUE, format = 'latex') %>% footnote(general = "Electronic Supplement: Appendices/03-intrasfsPol.csv", escape = FALSE, general_title = "")
 ```
 
-```{r, results='hold', eval = FALSE}
 
-sig_ihs_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, iHS = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-ihs-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(3) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:ihsPolgenes) All genes that had a significant iHS value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-ihs-Pol.csv", threeparttable = TRUE)
 
-```
 
-```{r, results='hold', eval = FALSE}
-
-sig_nsl_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, nSL = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-nsl-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(3) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:nslPolgenes) All genes that had a significant nSL value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-nsl-Pol.csv", threeparttable = TRUE)
-
-```
 
 ### Significant \gls{ihs} and \gls{nsl} markers in Polynesian populations
 
@@ -166,13 +125,6 @@ ihsnsl_table%>%
 ```
 
 
-```{r, eval = FALSE}
-full_join(sig_ihs_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, iHS = statvalue) %>% arrange(chrom, chrom_start, Pop)%>% spread(Pop, iHS), sig_nsl_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, nSL = statvalue) %>% arrange(chrom, chrom_start, Pop) %>% spread(Pop, nSL), by = c("chrom", "chrom_start", "chrom_end", "genename"), suffix= c("_ihs", "_nsl")) %>% select(-chrom_end) %>% rename(position = chrom_start) %>% mutate_at(vars(contains('_ihs'),contains('_nsl')), funs(three_dp)) %>% mutate_at(vars(contains('_ihs'),contains('_nsl')), funs(case_when(. == "NA" ~ "", TRUE ~ .))) %>% left_join(., markers %>% select(chrom, chrom_start, marker), by = c('chrom', "position" = 'chrom_start')) %>% select(chrom, position, marker, everything()) %>%  rename(Chromosome = chrom, Position = position, Marker = marker, 'Gene Name' = genename, 'CIM iHS' = CIM_ihs, 'NZM iHS' = NZM_ihs, 'SAM iHS' = SAM_ihs, 'TON iHS' = TON_ihs, 'CIM nSL' = CIM_nsl, 'NZM nSL' = NZM_nsl, 'SAM nSL' = SAM_nsl, 'TON nSL' = TON_nsl)%>%  head() %>% kable(., booktabs = TRUE, linesep = "", format = 'latex', caption = '(\\#tab:ihsnslPolGenes) Significant markers for iHS and nSL in Polynesian populations.') %>% kable_styling(latex_options = 'scale_down', font_size = 8)
-
-rm(sig_ihs_val)
-rm(sig_nsl_val)        
-```
-
 ### Significant \gls{xpehh} markers in Polynesian populations
 
 ```{r, eval = TRUE, message=FALSE, results='hold'}
@@ -196,6 +148,8 @@ rm(xpehh)
 
 \FloatBarrier
 
+### Inflammatory and auto-immune genes with significant results in selection statistics for Polynesian populations
+
 ```{r, eval = TRUE, results='hold'}
 immunePol <- readRDS("Appendices/03-immunePol.RDS")
  immunePol %>% #filter(genename %in% immune_keep) %>% 
@@ -208,24 +162,6 @@ immunePol <- readRDS("Appendices/03-immunePol.RDS")
   # %>% filter((AFR > 0 | AMR >0 | EAS > 0 | ihs > 0 | nsl > 0) & (!is.na(Fay.Wu.H) | !is.na(Fu.Li.D)| !is.na(Fu.Li.F) | !is.na(Tajima.D) | !is.na(Zeng.E)))
 ```
 
-
-
-```{r tdPol, results = 'asis', warning = FALSE, eval = FALSE}
-# write table to csv file and create just the header of the table in the pdf
-lower_sig_stats %>% filter(statname == 'Tajima.D', pop %in% c('CIM','NZM','SAM','TON')) %>% anti_join(., lower_sig_stats %>% filter(statname == 'Tajima.D', !pop %in% c('CIM','NZM','SAM','TON')), by = "SYMBOL") %>% select(chrom, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',')  %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", ")) %>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(chr) %>% select(-chr) %T>%  {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03_tdPol.csv', row.names = FALSE, quote = TRUE)} %>% head(0) %>%  kable(., booktabs = TRUE, caption = "(\\#tab:lowersigtdPol) Loci that had a Tajima's D in the lower tail that was only found in a Polynesian population", format = 'latex') %>% footnote(general = "Electronic Supplement: Appendices/03\\\\_tdPol.csv", escape = FALSE)
-```
-
-```{r fwhPol, results='asis', warning= FALSE, echo = FALSE, eval = FALSE}
-lower_sig_stats %>% filter(statname == 'Fay.Wu.H', pop %in% c('CIM','NZM','SAM','TON')) %>% anti_join(., lower_sig_stats %>% filter(statname == 'Fay.Wu.H', !pop %in% c('CIM','NZM','SAM','TON')), by = "SYMBOL") %>% select(chrom, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',') %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", ")) %>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(chr) %>% select(-chr)%>%  write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03_fwhPol.csv', row.names = FALSE, quote = TRUE) # %>%  kable(., booktab = TRUE, longtable = TRUE,caption = "(\\#tab:lowersigfwhPol) Loci that had a Fay and Wu's H in the lower tail that was only found in a Polynesian population")
-```
-
-```{r flfPol, results = 'asis', warning = FALSE, echo = FALSE, eval = FALSE}
-lower_sig_stats %>% filter(statname == 'Fu.Li.F', pop %in% c('CIM','NZM','SAM','TON')) %>% anti_join(., lower_sig_stats %>% filter(statname == 'Fu.Li.F', !pop %in% c('CIM','NZM','SAM','TON')), by = "SYMBOL") %>% select(chrom, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',') %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", "))%>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(chr) %>% select(-chr) %>% head() %>% kable(., booktab = TRUE, longtable = TRUE,caption = "(\\#tab:lowersigflfPol) Loci that had a Fu and Li's F in the lower tail that was only found in a Polynesian population")
-```
-
-```{r zePol, results='asis', eval = FALSE}
-lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('CIM','NZM','SAM','TON')) %>% anti_join(., lower_sig_stats %>% filter(statname == 'Zeng.E', !pop %in% c('CIM','NZM','SAM','TON')), by = "SYMBOL") %>% select(chrom, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',') %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", "))%>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(chr) %>% select(-chr) %>%head() %>%  kable(.,booktab = TRUE, longtable = TRUE, caption = "(\\#tab:lowersigzePol) Loci that had a Zeng's E in the lower tail that was only found in a Polynesian population")
-```
 
 \FloatBarrier
 
@@ -320,7 +256,7 @@ gs_ze_table %>% mutate_at(vars('mean','sd','min','lower_1','upper_99','median','
 ```
 
 
-#### Polynesian windows for clustering of the extremes
+### Polynesian windows for clustering of the extremes
 
 ```{r}
 eigen <- read.table('~/data/NZ_coreExome_1kgp/PCA/indiv_pops/NZ_1KGP_allchr_indep_eigen.pca.evec', stringsAsFactors = FALSE)
@@ -366,7 +302,7 @@ read_csv('Appendices/04-ze-pol-firstper-genes.csv', n_max = 0) %>% kable(format 
 read_csv('Appendices/04-ze-pol-ninetyninethper-genes.csv', n_max = 0) %>% kable(format = 'latex', caption = '(\\#tab:polZePosGenes) Genes intersecting the windows of the 99th percentile \\gls{ze} in Polynesians') %>% footnote('Appendices/04-ze-pol-ninetyninethper-genes.csv', threeparttable = TRUE)
 ```
 
-#### Clustered regions from significant markers for \gls{ihs} and \gls{nsl}
+### Clustered regions from significant markers for \gls{ihs} and \gls{nsl}
 
 ```{r}
 clus_ihs <- readRDS('~/data/NZ_coreExome_1kgp/haplotype/ihs_clus_regions-15-12-2017.RDS')
@@ -379,7 +315,7 @@ full_join(clus_ihs, clus_nsl, by = c('pop','chrom','ClusterID'), suffix = c(" iH
 
 \FloatBarrier
 
-#### Clustered median centered metabolic disease genes
+### Clustered median centered metabolic disease genes
 
 
 ```{r load_gene_clus, include = FALSE}
@@ -394,7 +330,7 @@ names(metsyn) <- c('mat_d','prop')
 names(kd) <- c('mat_d','prop')
 ```
 
-##### Gout
+#### Gout
 
 ```{r, message = FALSE, warning = FALSE}
 s <- "Tajima.D"
@@ -418,7 +354,7 @@ gout$mat_d[[s]] %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, st, -c
 ```
 
 
-##### Obesity
+#### Obesity
 
 ```{r, message = FALSE, warning = FALSE}
 s <- "Tajima.D"
@@ -441,7 +377,7 @@ s <- "Zeng.E"
 obesity$mat_d[[s]] %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, st, -contains("chrom")) %>% left_join(., obesity$mat_d[[s]] %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% obesity_GR$SYMBOL) %>% mutate(chr = str_sub(chrom, 4) %>% as.numeric()) %>% select(-width, -strand, -TXSTRAND, -superpop) %>% spread(pop, st) %>% arrange(chr, chrom_start) %>% select(-chr) %>% set_names(., c("Chrom","Start","End", "Gene name", names(.)[-1:-4] %>% str_sub(., 5)))  %T>%{write_csv(., path = "Appendices/04-obesity_ze_gene_clus.csv", col_names = TRUE)} %>% head()%>% kable(., longtable =  TRUE, caption = "(\\#tab:obesityzegeneclus) Zeng's E for windows at obesity associated loci.", digits = 3, booktabs = TRUE)  %>% column_spec(., 5:35, width = '2em') %>% column_spec(., 1, width = '3.5em') %>% column_spec(., 2:4, width = '3.5em')%>% add_header_above(., header = c(rep("", 4), "AFR" = 7, "AMR" = 4, "EAS" = 5, "EUR" = 6, "POL" = 4, "SAS" = 5)) %>% kable_styling(font_size = 5,latex_options = 'repeat_header') %>% kableExtra::footnote("Appendices/04-obesity_ze_gene_clus.csv", threeparttable = TRUE) %>%landscape()
 ```
 
-##### Type 2 diabetes
+#### Type 2 diabetes
 
 ```{r, message = FALSE, warning = FALSE}
 s <- "Tajima.D"
@@ -466,7 +402,7 @@ t2d$mat_d[[s]] %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, st, -co
 
 
 
-##### Kidney disease
+#### Kidney disease
 
 ```{r, message = FALSE, warning = FALSE}
 s <- "Tajima.D"
@@ -489,7 +425,7 @@ s <- "Zeng.E"
 kd$mat_d[[s]] %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, st, -contains("chrom")) %>% left_join(., kd$mat_d[[s]] %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% kd_GR$SYMBOL) %>% mutate(chr = str_sub(chrom, 4) %>% as.numeric()) %>% select(-width, -strand, -TXSTRAND, -superpop) %>% spread(pop, st) %>% arrange(chr, chrom_start) %>% select(-chr) %>% set_names(., c("Chrom","Start","End", "Gene name", names(.)[-1:-4] %>% str_sub(., 5)))  %T>%{write_csv(., path = "Appendices/04-kd_ze_gene_clus.csv", col_names = TRUE)} %>% head()%>% kable(., longtable =  TRUE, caption = "(\\#tab:kdzegeneclus) Zeng's E for windows at kd associated loci.", digits = 3, booktabs = TRUE)  %>% column_spec(., 5:35, width = '2em') %>% column_spec(., 1, width = '3.5em') %>% column_spec(., 2:4, width = '3.5em')%>% add_header_above(., header = c(rep("", 4), "AFR" = 7, "AMR" = 4, "EAS" = 5, "EUR" = 6, "POL" = 4, "SAS" = 5)) %>% kable_styling(font_size = 5,latex_options = 'repeat_header') %>% kableExtra::footnote("Appendices/04-kd_ze_gene_clus.csv", threeparttable = TRUE) %>% landscape()
 ```
 
-##### Metabolic syndrome
+#### Metabolic syndrome
 
 ```{r, message = FALSE, warning = FALSE}
 s <- "Tajima.D"
