--- a/Excluded/excluded_A6-admixture.Rmd
+++ b/Excluded/excluded_A6-admixture.Rmd
@@ -7,17 +7,17 @@ panel <- read.delim(paste0('~/data/NZ_coreExome_1kgp/nz_1kgp.panel'), stringsAsF
 ```
 
 
-```{r, echo = FALSE, fig.cap='(ref:cv)'}
+```{r, echo = FALSE, eval = FALSE}
 k_cv <- read.table('~/data/NZ_coreExome_1kgp/admixture/CV_error.txt', header = FALSE) %>% full_join(.,  read.table('~/data/NZ_coreExome_1kgp/admixture/projected/CV_error.txt', header = FALSE) %>% rename( cv_proj = V2), by = "V1") %>% arrange(V1) %>% rename(K = V1, "CV Error" = V2, "Projection CV Error" = cv_proj)
 
-knitr::kable(k_cv, caption = "(\\#tab:admixCV) Admixture cross-validation (CV) error for different values of K. CV Projection is the admixture cross-validation error for different K values from projecting the components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS onto the populations of \\gls{amr} and \\gls{pol}.")
+knitr::kable(k_cv, caption = "(\\#tab:admixCV2) Admixture cross-validation (CV) error for different values of K. CV Projection is the admixture cross-validation error for different K values from projecting the components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS onto the populations of \\gls{amr} and \\gls{pol}.")
 ```
 
 
 The cross validation of K from 1 to 15 resulted in K = 11 having the minimum cross validation error.
 
 
-```{r admixDataProjection, echo = FALSE}
+```{r admixDataProjection, echo = FALSE, eval = FALSE}
 ref <- read.table('~/data/NZ_coreExome_1kgp/admixture/projected/reference_bootstrap.9.Q', stringsAsFactors = FALSE)
 ref_fam <- read.table('~/data/NZ_coreExome_1kgp/admixture/projected/reference.fam', header = FALSE, stringsAsFactors = FALSE)
 names(ref_fam) <- c('FID','sample','PID','MID','SEX','AFF')
@@ -30,14 +30,14 @@ study_fam <- left_join(study_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN'
 ```
 
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, eval = FALSE}
 # barplot of the reference proportions
 cbind(ref_fam, ref) %>% gather(., "V","Q",9:NCOL(.)) %>% mutate(super_sample = paste0(super_pop,'_',sample), facet_pop = paste(super_pop, pop)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = V)) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 6) + theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) 
 
 ```
 
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, eval = FALSE}
 # admixed pops that were projected onto
 #removed NZC for to make nice
 cbind(study_fam, study) %>% gather(., "V","Q",9:NCOL(.)) %>% mutate(super_sample = paste0(super_pop,'_',sample), super_pop = factor(super_pop, levels = c("AMR", "POL","EUR"), ordered = TRUE)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = V)) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 4) +theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) 
